--- a/MiniStore-1.0.0/index.html
+++ b/MiniStore-1.0.0/index.html
@@ -863,32 +863,32 @@
               </div>
               <div class="col-lg-3 col-sm-6 pb-3">
                 <div class="footer-menu text-uppercase">
-                  <h5 class="widget-title pb-2">Help & Info Help</h5>
+                  <h5 class="widget-title pb-2">Ajuda i informacio d'ajuda</h5>
                   <ul class="menu-list list-unstyled">
                     <li class="menu-item pb-2">
-                      <a href="#">Track Your Order</a>
+                      <a href="#">Rastreja la teva ordre</a>
                     </li>
                     <li class="menu-item pb-2">
-                      <a href="#">Returns Policies</a>
+                      <a href="#">Politiques de devolució</a>
                     </li>
                     <li class="menu-item pb-2">
-                      <a href="#">Shipping + Delivery</a>
+                      <a href="#">Enviament i Entrega</a>
                     </li>
                     <li class="menu-item pb-2">
-                      <a href="#">Contact Us</a>
+                      <a href="#">Contacte'ns</a>
                     </li>
                     <li class="menu-item pb-2">
-                      <a href="#">Faqs</a>
+                      <a href="#">Preguntes</a>
                     </li>
                   </ul>
                 </div>
               </div>
               <div class="col-lg-3 col-sm-6 pb-3">
                 <div class="footer-menu contact-item">
-                  <h5 class="widget-title text-uppercase pb-2">Contact Us</h5>
-                  <p>Do you have any queries or suggestions? <a href="mailto:">yourinfo@gmail.com</a>
+                  <h5 class="widget-title text-uppercase pb-2">Contacte'ns</h5>
+                  <p>Tens cap consulta o recomanacions?<a href="mailto:">adrian.buizam@educem.net</a>
                   </p>
-                  <p>If you need support? Just give us a call. <a href="">+55 111 222 333 44</a>
+                  <p>Si necessites ajuda truca'ns<a href="">+55 111 222 333 44</a>
                   </p>
                 </div>
               </div>
@@ -903,7 +903,7 @@
         <div class="row d-flex flex-wrap justify-content-between">
           <div class="col-md-4 col-sm-6">
             <div class="Shipping d-flex">
-              <p>We ship with:</p>
+              <p>Enviem amb:</p>
               <div class="card-wrap ps-2">
                 <img src="images/dhl.png" alt="visa">
                 <img src="images/shippingcard.png" alt="mastercard">
@@ -912,7 +912,7 @@
           </div>
           <div class="col-md-4 col-sm-6">
             <div class="payment-method d-flex">
-              <p>Payment options:</p>
+              <p>Opcions de pagament</p>
               <div class="card-wrap ps-2">
                 <img src="images/visa.jpg" alt="visa">
                 <img src="images/mastercard.jpg" alt="mastercard">
@@ -922,7 +922,7 @@
           </div>
           <div class="col-md-4 col-sm-6">
             <div class="copyright">
-              <p>© Copyright 2023 MiniStore. Design by <a href="https://templatesjungle.com/">TemplatesJungle</a> Distribution by <a href="https://themewagon.com">ThemeWagon</a>
+              <p>© Copyright 2023 MiniStore canviada. Dissenyat per <a href="https://templatesjungle.com/">TemplatesJungle</a> Distribuit per <a href="https://themewagon.com">ThemeWagon</a>
               </p>
             </div>
           </div>
