--- a/MiniStore-1.0.0 - copia/index.html
+++ b/MiniStore-1.0.0 - copia/index.html
@@ -194,7 +194,10 @@
                       <a href="contact.html" class="dropdown-item">Contact</a>
                     </li>
                     <li>
-                      <a href="author.html" class="dropdown-item">Contact</a>
+                      <a href="author.html" class="dropdown-item">Author</a>
+                    </li>
+                    <li>
+                      <a href="links.html" class="dropdown-item">Disseny</a>
                     </li>
                   </ul>
                 </li>
